# cloudops-ai

./: .env.example  .gitignore  CLOUDOPS_AI_EXEC_BRIEF.md  CLOUDOPS_PRODUCT_STRATEGY.md  MARKET_RESEARCH.md  PRODUCT_ROADMAP.md  PROGRESS.md  README.md  WEEK_3_PRODUCT_DESIGN.md  cloudops-ai.service  cloudops_ai.db  pyproject.toml
backend/pool/: api.py  autonomous_start.py  config.py  config_local.py  maestro.py  validate_refactor.py
frontend/: index.html  package-lock.json  package.json
frontend/public/: pool-office.html
frontend/src/: App.jsx  api.js  store.js
frontend/src/components/: AlertBadge.jsx  Sidebar.jsx
frontend/src/pages/: Dashboard.jsx  Inventory.jsx  Landing.jsx  Login.jsx
frontend/src/styles/: Landing.css
scripts/: init_demo_tenant.py  test_webhook.py
sql/: 01_schema.sql
src/cloudops_ai/: __init__.py  __main__.py  api.py  api_v1.py  auth.py  config.py  db.py  llm.py  logging.py
src/cloudops_ai/agents/: classifier.py  diagnostics.py
src/cloudops_ai/integrations/: slack_notifier.py
src/cloudops_ai/models/: alert.py  diagnosis.py  orm.py
src/cloudops_ai/prompts/: classifier.py  diagnostics.py
src/cloudops_ai/tools/: __init__.py  azure_mock.py  azure_mock_inventory.py  azure_real.py
tests/: test_models.py
